hopefully fixed grid layout issues

--- a/static/style.css
+++ b/static/style.css
@@ -36,19 +36,18 @@ nav ul li.selected{
   'menu main main main right right'
   'menu footer footer footer footer footer';
   grid-gap: 10px;
-  background-color: #2196F3;
   padding: 10px;
 }
 
-.item1 { grid-area: header; }
-.item2 { grid-area: right; }
-.item3 { grid-area: main; }
-.item4 { grid-area: right; }
-.item5 { grid-area: right; }
-.item6 { grid-area: right; }
-.item7 { grid-area: right; }
-.item8 { grid-area: right; }
-.item9 { grid-area: right; }
+.item1 { grid-area: header;}
+.item2 { grid-area: right-top;}
+.item3 { grid-area: main;}
+.item4 { grid-area: right-center;}
+.item5 { grid-area: left;}
+.item6 { grid-area: left-center;}
+.item7 { grid-area: right-bottom;}
+.item8 { grid-area: left-bottom;}
+.item9 { grid-area: right;}
 
 .title{
     color: black;
